<?xml version="1.0" encoding="utf-8" ?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">MovieWorld</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">Tv Shows</string>
    <string name="change_language_settings">Change Language Settings</string>
    <string name="language_code">en-US</string>
    <string name="you_choose">You Choose \</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movies_name">Movies Name</string>
    <string name="release_date">Release Date</string>
    <string name="description">Description</string>
    <string name="picture">Picture</string>
    <string name="favorite">Favorite \</string>
    <string name="share">Share \</string>
    <string name="detail_poster_movie">Detail Poster Movie</string>
    <string name="detail_description">Detail Description</string>
    <string name="swipe_to_refresh">Swipe to refresh</string>
    <string name="about">About</string>
</resources>
