<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="@dimen/activity_main_horizontal_margin"
    android:layout_marginTop="@dimen/activity_main_vertical_margin"
    android:layout_marginRight="@dimen/activity_main_horizontal_margin"
    android:layout_marginBottom="6dp"
    card_view:cardCornerRadius="6dp"
    card_view:cardElevation="6dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_margin="4dp">

        <ImageView
            android:id="@+id/item_img"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/picture"
            android:scaleType="fitXY"
            tools:src="@color/colorAccent" />

        <TextView
            android:id="@+id/item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_toEndOf="@id/item_img"
            android:text="@string/movies_name"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/item_release"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_title"
            android:layout_marginStart="6dp"
            android:layout_marginTop="2dp"
            android:layout_toEndOf="@id/item_img"
            android:text="@string/release_date"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/item_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/layout_button"
            android:layout_below="@id/item_release"
            android:layout_marginStart="6dp"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@id/item_img"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/description"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/layout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="6dp"
            android:layout_toEndOf="@id/item_img"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_set_favorite"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/favorite"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn_set_share"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/share"
                android:textSize="12sp" />

        </LinearLayout>

    </RelativeLayout>
</android.support.v7.widget.CardView>